# LogPress

./: .gitignore  CMakeLists.txt  README.md  SKILL.md  claude.md
examples/: example-fix.yaml  example-mode.toml
fixes/zephyr/: devicetree-alias-undeclared.yaml  devicetree-ord-undefined.yaml  kconfig-redefined-symbol.yaml
modes/: cmake.toml  generic.toml  gradle.toml  pytest.toml  zephyr.toml
schema/: fix.schema.yaml  mode.schema.toml
src/: logexplore.c  logfix.c  logparse.c
src/lib/: budget.c  budget.h  dedup.c  dedup.h  fix.c  fix.h  mode.c  mode.h  score.c  score.h  segment.c  segment.h  token.c  token.h  util.c  util.h
test_programs/led_strip/: build.ps1  flash_fixed.ps1
test_programs/led_strip/boards/: xiao_ble_nrf52840_sense.overlay  xiao_nrf54l15_nrf54l15_cpuapp.overlay
tests/: CMakeLists.txt
